--- a/database/bot/settings.json
+++ b/database/bot/settings.json
@@ -1,6 +1,6 @@
 {
-	"prefix": "#",
-	"ownerNumber": "6282347260729",
+	"prefix": ".",
+	"ownerNumber": "6281258758551",
 	"ownername": "RIMURUBOTZ",
 	"botname": "MYBOTZ",
 	"tz": "➪",
@@ -18,12 +18,12 @@
 	"donasi": "LIST DONASI :)",
 	"gopay": "082347260729",
 	"dana": "082347260729",
-	"pulsa": "082347260729",
+	"pulsa": "081258758551",
 	
-	"asal": "MAKASSAR",
-	"umur": "9 TAHUN",
+	"asal": "KALTIM",
+	"umur": "12 TAHUN",
 	"agama": "ISLAM",
-	"gender": "GIRL",
+	"gender": "boy",
 		
 	"captionfake": "MYBOTZ IN TERVERIFIKASI",
 	"textmenu": "© Whatsapp || @adiwajshing/baileys"
